# Course_w_7

./: .gitignore  .template.env  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
